--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mooflix",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.1.4",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,7 +12,9 @@
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
     "express-graphql": "^0.11.0",
+    "fs": "0.0.1-security",
     "graphql": "^15.4.0",
     "isomorphic-unfetch": "^3.1.0",
     "mongoose": "^5.10.11",
