--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "next build",
     "start": "next start"
   },
+  "peerOptionalDependencies": { 
+    "mongodb": "^3.6.0" 
+  },
   "dependencies": {
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
