--- a/package.json
+++ b/package.json
@@ -8,27 +8,35 @@
     "build": "next build",
     "start": "next start"
   },
-  "peerOptionalDependencies": { 
-    "mongodb": "^3.6.0" 
+  "peerOptionalDependencies": {
+    "mongodb": "^3.6.0"
   },
   "dependencies": {
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express-graphql": "^0.11.0",
     "fs": "0.0.1-security",
+    "fuse.js": "^3.4.3",
     "graphql": "^15.4.0",
+    "gridfs-stream": "^1.1.1",
     "isomorphic-unfetch": "^3.1.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.10.11",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "next": "9.5.5",
     "next-auth": "^3.1.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
+    "path": "^0.12.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "request": "^2.88.2",
     "sass": "^1.27.0",
+    "swr": "^0.3.9",
     "validator": "^13.1.17",
     "webhdfs": "^1.2.0"
   }
